tests/lang/oberon/types/fail/recursive.obr
MODULE RecursiveType;
    TYPE FIRST = SECOND;
        SECOND = FIRST;
END RecursiveType.
